--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js-pwdgen-wannabe</title>
 </head>
+
 <body>
-    <script type="text/javascript" src="js/script.js"></script>
+    <div id="pw-gen"></div>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
